<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_question_3"
            android:textColor="@color/white" />

        <RadioGroup
            android:id="@+id/radiogroup_question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radiobutton_question_3_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_question_3_answer_1" />

            <RadioButton
                android:id="@+id/radiobutton_question_3_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_question_3_answer_2" />

            <RadioButton
                android:id="@+id/radiobutton_question_3_answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_question_3_answer_3" />

            <RadioButton
                android:id="@+id/radiobutton_question_3_answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_question_3_answer_4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <Button
                android:id="@+id/button_next_question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/orange"
                android:text="@string/button_next_question"
                android:onClick="OnClick" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>